--- a/Prism.Navigation.Avalonia/Prism.Navigation.Avalonia.csproj
+++ b/Prism.Navigation.Avalonia/Prism.Navigation.Avalonia.csproj
@@ -19,5 +19,9 @@
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
         </EmbeddedResource>
     </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="../Pipopolam.Avalonia.NavigationPages/Pipopolam.Avalonia.NavigationPages.csproj" />
+    </ItemGroup>
 
 </Project>
